fix: fix container items not aligning properly

--- a/pages/welcome.module.css
+++ b/pages/welcome.module.css
@@ -22,10 +22,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  height: 100vh;
 }
 
 .container {
   max-width: 1110px;
-  height: 100vh;
-  position: relative;
 }
